@@ -1,3 +1,5 @@
+* Check read access on field in search order (issue8189)
+
 Version 5.0.5 - 2019-02-19
 * Bug fixes (see mercurial logs for details)
 
